返回结果仍有小问题

--- a/src/main/resources/jdbc.properties
+++ b/src/main/resources/jdbc.properties
@@ -1,7 +1,7 @@
 #jdbc settings
 jdbc.driver=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://${MYSQL_ADD:127.0.0.1}/sample-web?useUnicode=true&characterEncoding=utf-8
+jdbc.url=jdbc:mysql://193.112.65.196/mvc?useUnicode=true&characterEncoding=utf-8
 jdbc.username=mvc
-jdbc.password=${MYSQL_PSW}
+jdbc.password=981120shao
 
 #FIXME 如果${}不能用
